@@ -118,6 +118,7 @@ metaReturnType = "Return type"
 metaNoXml = "Unable to decode the XML structure!"
 metaDefaultValue = "Default value"
 metaTypedValue = "Typed as"
+metaRessourceAnalysis = "Ressource analysis"
 metaConstants = "Constants"
 
 calledFromTxt = "Called from"
@@ -277,6 +278,7 @@ metaReturnType = "Rückgabe Typ"
 metaNoXml = "Die XML Struktur kann nicht dekodiert werden!"
 metaDefaultValue = "Default Wert"
 metaTypedValue = "Typisiert als"
+metaRessourceAnalysis = "Ressourcen Analyse"
 metaConstants = "Konstanten"
 
 calledFromTxt = "Aufruf von"
