@@ -40,6 +40,7 @@
 - Change: Moved the scalar analysis to a more appropriate
   namespace.
 - Change: Split the variable name cleanup into its own class.
+- Change: Moved the Opaque Ressource Class analysis into its own class.
 
 4.1.9
 - Added Support for the PHP 8 cUrl handle class.
